--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-# Binaries for programs and plugins
 *.exe
-*.exe~
-*.dll
-*.so
 *.dylib
-
-# Test binary, build with `go test -c`
+*.log
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
